--- a/example.env
+++ b/example.env
@@ -1,3 +1,8 @@
 PORT="YOUR SERVER PORT GOES HERE"
 URL_DB="YOUR DATABASE URL GOES HERE"
 URL_CLIENT="YOUR CLIENT URL GOES HERE"
+DUMMY_PASS="YOUR DUMMY_PASS GOES HERE"
+
+CLOUDINARY_NAME="YOUR CLOUDINARY NAME GOES HERE"
+CLOUDINARY_KEY="YOUR CLOUDINARY KEY GOES HERE"
+CLOUDINARY_SECRET="YOUR CLOUDINARY SECRET GOES HERE"
